# l3gion_rust

./: .gitignore  Cargo.toml  README.md  imgui.ini  profiling(2024-04-02.09-05-53).opt  profiling(2024-04-02.09-07-22).opt  profiling(2024-04-02.09-09-21).opt  profiling(2024-04-02.09-10-05).opt  profiling(2024-04-02.09-10-49).opt  shader_compile.bat
assets/materials/: BP_BRDF.lgmat  IMGUI_CORRECTION.lgmat  UI.lgmat  final_pass.lgmat  post_processing_pass.lgmat  test_red.lgmat  test_texture.lgmat
assets/shaders/: 2DShader.vert  2DShader_v.vert  obj_picker_f.frag  object_picker_f.frag  object_picker_v.vert  shader.frag
assets/shaders/compiled/: 2DShader.spv  2DShader_f.spv  2DShader_v.spv  obj_picker_f.spv  object_picker_f.spv  object_picker_v.spv  shader.spv
assets/shaders/reflected/: 2DShader  2DShader.yaml  2DShader_f.yaml  2DShader_v.yaml  obj_picker_f.yaml  obj_picker_v.yaml  shader  shader.yaml
assets/shaders/src/: BP_BRDF_f.frag  BP_BRDF_v.vert  UI_f.frag  UI_v.vert  UI_window_f.frag  UI_window_v.vert  final_pass_f.frag  final_pass_v.vert  imgui_correction_f.frag  instancing_f.frag  instancing_v.vert  obj_picker_v.vert  post_processing_f.frag
engine_assets/YAML/materials/: 1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  test.yaml  test_red.yaml
engine_assets/YAML/meshes/: cube.yaml  quad.yaml  sphere.yaml
engine_assets/YAML/shaders/: UI_f.yaml  (+5 more)
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
resources/shaders/: 2DShader_f.frag  2DShader_v.vert  obj_picker_f.frag  obj_picker_v.vert
serializer/: Cargo.toml
serializer/src/: lib.rs
sllog/: Cargo.toml
sllog/src/: lib.rs
src/: lg_core.rs  lib.rs  main.rs  window.rs
src/lg_core/: am.rs  application.rs  asset_manager.rs  camera.rs  editor_layer.rs  entity.rs  event.rs  frame_time.rs  input.rs  layer.rs  mod.rs  renderer.rs  scene.rs  serializer.rs  test_layer.rs  test_scene.rs  timer.rs  ui_layer.rs  uuid.rs  window.rs
src/utils/: mod.rs  profiler.rs  tools.rs
(+142 files in other folders)
