[package]
name = "l3gion_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optick = "=1.3.4"
rand = "0.8.5"
image = "0.25.0"
raw-window-handle = "0.5.2"
winit = { version = "0.29.2", default-features = false, features = ["rwh_05"] }
shaderc = "0.8.3"
tobj = { version = "3", features = ["log"] }
nalgebra-glm = "0.18.0"
syn = "2.0.60"

serializer = { path = "serializer" }
sllog = { path = "../../sllog" }
lg_renderer = { path = "../../lg_renderer/lg_renderer" }
