[package]
name = "l3gion_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
optick = "=1.3.4"
rayon = "1.10.0"
rand = "0.8.5"
image = "0.25.0"
glutin = { version = "0.31.0", default-features = false }
glutin-winit = "0.4.2"
gl = "0.14.0"
raw-window-handle = "0.5.2"
winit = { version = "0.29.2", default-features = false, features = ["rwh_05"] }
shaderc = "0.8.3"
tobj = { version = "4.0.2", features = ["log"] }
nalgebra-glm = "0.18.0"
sha2 = "0.10.8"
bitflags = "=2.5.0"

imgui = "0.12.0"
imgui-winit-support = "0.12.0"
imgui-glow-renderer = "0.12.0"
glow = "0.13.1"

serializer = { path = "serializer" }
sllog = { path = "../../sllog" }